; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/octeon-sdk/extr_cvmx-debug.c_cvmx_debug_process_next_packet.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/octeon-sdk/extr_cvmx-debug.c_cvmx_debug_process_next_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 (i8*, i32)* }
%struct.TYPE_3__ = type { i64 }

@CVMX_DEBUG_MAX_REQUEST_SIZE = common dso_local global i32 0, align 4
@cvmx_debug_comms = common dso_local global %struct.TYPE_4__** null, align 8
@cvmx_debug_globals = common dso_local global %struct.TYPE_3__* null, align 8
@.str = private unnamed_addr constant [13 x i8] c"Request: %s\0A\00", align 1
@COMMAND_NOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @cvmx_debug_process_next_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cvmx_debug_process_next_packet() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = load i32, i32* @CVMX_DEBUG_MAX_REQUEST_SIZE, align 4
  %6 = zext i32 %5 to i64
  %7 = call i8* @llvm.stacksave()
  store i8* %7, i8** %2, align 8
  %8 = alloca i8, i64 %6, align 16
  store i64 %6, i64* %3, align 8
  %9 = load %struct.TYPE_4__**, %struct.TYPE_4__*** @cvmx_debug_comms, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cvmx_debug_globals, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %9, i64 %12
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i64 (i8*, i32)*, i64 (i8*, i32)** %15, align 8
  %17 = load i32, i32* @CVMX_DEBUG_MAX_REQUEST_SIZE, align 4
  %18 = call i64 %16(i8* %8, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %0
  %21 = call i32 @cvmx_debug_printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* %8)
  %22 = call i32 @cvmx_debug_process_packet(i8* %8)
  store i32 %22, i32* %1, align 4
  store i32 1, i32* %4, align 4
  br label %25

23:                                               ; preds = %0
  %24 = load i32, i32* @COMMAND_NOP, align 4
  store i32 %24, i32* %1, align 4
  store i32 1, i32* %4, align 4
  br label %25

25:                                               ; preds = %23, %20
  %26 = load i8*, i8** %2, align 8
  call void @llvm.stackrestore(i8* %26)
  %27 = load i32, i32* %1, align 4
  ret i32 %27
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @cvmx_debug_printf(i8*, i8*) #2

declare dso_local i32 @cvmx_debug_process_packet(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
